# uai-dados

./: .gitignore  README.md  pyproject.toml  uai.yml
.github/workflows/: deploy.yml
paginas/: index.py  receita-mensal.py  receita.py
uai_dados/: __init__.py  build.py  cli.py  componentes.py  dados.py  diagnostico.py  matriz.py  site_mkdocs.py
uai_dados/static/: uai.css  uai.js
